# openai-function-calling-openapi-spec

./: .env-example  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: openapi.json
src/: function_calling.ipynb
